update djs & update selectmenu from deprecated to v14.7.1

--- a/Structures/Settings/config.json
+++ b/Structures/Settings/config.json
@@ -3,6 +3,8 @@
 
     "SETTINGS": {
         "Prefix": "g!",
+        "Enable_Express": true,
+        "Port": 8080,
         "Roles": {
             "AcceptRoles": "ROLE_ID",
 
