--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "colors": "^1.4.0",
     "common-tags": "^1.8.2",
     "discord-hybrid-sharding": "^1.7.4",
-    "discord.js": "^14.6.0",
+    "discord.js": "^14.7.1",
     "dotenv": "^16.0.2",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "ms": "^2.1.3",
